# nano-llm

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TRAINING.md  pyproject.toml  train_nano.py
checkpoints/context_long/: checkpoint_final.pt  checkpoint_step_1000.pt  checkpoint_step_500.pt
checkpoints/context_short/: checkpoint_final.pt  checkpoint_step_1000.pt  checkpoint_step_500.pt
checkpoints/depth_deep/: checkpoint_final.pt  checkpoint_step_1000.pt  checkpoint_step_500.pt
checkpoints/depth_shallow/: checkpoint_final.pt  checkpoint_step_1000.pt  checkpoint_step_500.pt
checkpoints/nano/: checkpoint_final.pt  checkpoint_step_1000.pt  checkpoint_step_500.pt
checkpoints/small/: checkpoint_final.pt  checkpoint_step_1000.pt  checkpoint_step_500.pt
checkpoints/width_narrow/: checkpoint_final.pt  checkpoint_step_1000.pt  checkpoint_step_500.pt
data/raw/: sample.txt  train.txt
experiments/: README.md  run_scaling_experiments.py  scaling_configs.py
experiments/results/: capacity_scaling.json  context_scaling.json  depth_scaling.json  width_scaling.json
src/nano_llm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/nano_llm/config/: model_config.py
src/nano_llm/inference/: __main__.py  chat.py  generate.py
src/nano_llm/model/: attention.py  block.py  mlp.py  model.py
src/nano_llm/tokenizer/: tokenizer.py
src/nano_llm/train/: __main__.py  train.py
src/nano_llm/utils/: bigram.py  seed.py  text_stats.py
