[project]
name = "nano-llm"
version = "0.1.0"
description = "A minimal character-level Transformer language model built from first principles"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/nano-llm"
Repository = "https://github.com/yourusername/nano-llm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
